desktop/src/main/java/haveno/desktop/haveno.css
/* ... */
/* copied form modena.css text-input */
#flow-pane-checkboxes-bg {
    -fx-text-fill: -fx-text-inner-color;
    -fx-highlight-fill: derive(-fx-control-inner-background, -20%);
    -fx-highlight-text-fill: -fx-text-inner-color;
    -fx-prompt-text-fill: derive(-bs-prompt-text, -30%);
    -fx-background-color: linear-gradient(to bottom, derive(-fx-text-box-border, -10%), -fx-text-box-border),
    linear-gradient(from 0px 0px to 0px 5px, derive(-fx-control-inner-background, -9%), -fx-control-inner-background);
    -fx-background-insets: 0, 1;
    -fx-background-radius: 3, 2;
    -fx-padding: 0.333333em 0.583em 0.333333em 0.583em; /* 4 7 4 7 */
}

#flow-pane-checkboxes-non-editable-bg {
    -fx-text-fill: -fx-text-inner-color;
    -fx-highlight-fill: derive(-fx-control-inner-background, -20%);
    -fx-highlight-text-fill: -fx-text-inner-color;
    -fx-prompt-text-fill: derive(-bs-prompt-text, -30%);
    -fx-background-color: linear-gradient(to bottom, derive(-fx-text-box-border, -10%), -fx-text-box-border),
    linear-gradient(from 0px 0px to 0px 5px, derive(-fx-control-inner-background, -9%), -bs-color-gray-1);
    -fx-background-insets: 0, 1;
    -fx-background-radius: 3, 2;
    -fx-padding: 0.333333em 0.583em 0.333333em 0.583em; /* 4 7 4 7 */
}

/* message-list-view*/
#message-list-view.list-view:focused > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected {
    -fx-background-color: transparent;
}

#message-list-view.list-view > .virtual-flow > .clipped-container > .sheet > .list-cell {
    -fx-background-color: transparent;
}

#message-list-view.list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:filled {
    -fx-background-color: transparent;
}

#message-list-view.list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected {
    -fx-background-color: transparent;
}

#message-list-view.list-view:focused > .virtual-flow > .clipped-container > .sheet > .list-cell {
    -fx-background-color: transparent;
}

#message-list-view.list-cell {
    -fx-padding: 0.25em 0.583em 0.25em 0.583em;
}

#message-list-view.list-view {
    -fx-background-color: transparent;
    -fx-background-insets: 0, 1;
    -fx-padding: 1;
    -fx-background-image: url("../../images/chatbg_light.png");
    -fx-background-repeat: repeat;
    -fx-background-position: 0 0;
    -fx-background-size: 700px;
}

#message-list-view.list-view:focused {
    -fx-background-color: transparent;
    -fx-background-insets: 0, 1;
    -fx-padding: 1;
}

/* bubble */
#message-bubble-green {
    -fx-background-color: -bs-color-primary;
    -fx-background-radius: 10 10 10 10;
}

#message-bubble-blue {
    -fx-background-color: -bs-rd-message-bubble;
    -fx-background-radius: 10 10 10 10;
}

#message-bubble-grey {
    -fx-background-color: -bs-color-gray-3;
    -fx-background-radius: 10 10 10 10;
}

.attachment-icon {
    -fx-text-fill: -bs-background-color;
    -fx-cursor: hand;
}

.attachment-icon-black {
    -fx-text-fill: -bs-text-color;
    -fx-cursor: hand;
}

/*******************************************************************************
 *                                                                             *
 * Grid pane                                                                   *
 *                                                                             *
 ******************************************************************************/
.grid-pane {
    -fx-background-color: -bs-color-background-popup-blur;
    -fx-background-insets: 10;
    -fx-background-radius: 15;
    -fx-border-radius: 15;
    -fx-padding: 35, 40, 30, 40;
}

.grid-pane-separator {
    -fx-border-color: -bs-rd-separator;
    -fx-border-width: 0 0 1 0;
    -fx-translate-y: -2;
}

.grid-pane .text-area {
    -fx-border-width: 1;
    -fx-border-color: -bs-color-border-form-field;
    -fx-text-fill: -bs-text-color;
}

/********************************************************************************************************************
 *                                                                                                                  *
 * Market overview                                                                                                  *
 *                                                                                                                  *
 ********************************************************************************************************************/
.chart-pane {
    -fx-background-color: -bs-background-color;
}

#charts .chart-legend, #charts-dao .chart-legend {
    -fx-font-size: 1.077em;
    -fx-alignment: center;
}

#charts .axis, #price-chart .axis, #volume-chart .axis, #charts-dao .axis {
    -fx-tick-label-fill: -bs-rd-font-lighter;
    -fx-tick-label-font-size: 0.769em;
    -fx-font-size: 0.880em;
}

#price-chart  .axis-tick-mark-text-node,
#volume-chart .axis-tick-mark-text-node,
#charts-dao   .axis-tick-mark-text-node {
    -fx-text-alignment: center;
}

.chart-pane, .chart-plot-background, #charts .chart-plot-background {
    -fx-background-color: transparent;
}

#charts .default-color0.chart-area-symbol {
    -fx-background-color: -bs-buy, -bs-background-color;
}

#charts .default-color1.chart-area-symbol, #charts-dao .default-color0.chart-area-symbol {
    -fx-background-color: -bs-sell, -bs-background-color;
}

#charts .default-color0.chart-series-area-line {
    -fx-stroke: -bs-buy;
    -fx-stroke-width: 2px;
}

#charts .default-color1.chart-series-area-line, #charts-dao .default-color0.chart-series-area-line {
    -fx-stroke: -bs-sell;
    -fx-stroke-width: 2px;
}

/* The .chart-line-symbol rules change the color of the legend symbol */
#charts-dao .default-color0.chart-series-line { -fx-stroke: -bs-chart-dao-line1; }
#charts-dao .default-color0.chart-line-symbol { -fx-background-color: -bs-chart-dao-line1, -bs-chart-dao-line1; }

#charts-dao .default-color1.chart-series-line { -fx-stroke: -bs-chart-dao-line2; }
/* ... */

